Increased spacing between VS bug and VS text in FGSD so that it is more corect to the reference.

--- a/src/workingtitle-vcockpits-instruments-cj4/html_ui/Pages/VCockpit/Instruments/Airliners/CJ4/PFD/CJ4_PFD.css
+++ b/src/workingtitle-vcockpits-instruments-cj4/html_ui/Pages/VCockpit/Instruments/Airliners/CJ4/PFD/CJ4_PFD.css
@@ -390,7 +390,7 @@ cj4-pfd-element #Mainframe #PFD #InstrumentsContainer #AutopilotInfos .Right #ve
 cj4-pfd-element #Mainframe #PFD #InstrumentsContainer #AutopilotInfos .Right #verticalSpeedBugField_Icon #verticalSpeedbug {
     width: 20%;
     margin-left: -15%;
-    margin-right: -7%;
+    margin-right: -5%;
 }
 
 cj4-pfd-element #Mainframe #PFD #InstrumentsContainer #AutopilotInfos .Right #verticalSpeedBugField_Icon #verticalSpeedbug path {
